--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P140.xaml
@@ -10,24 +10,23 @@
              x:Class="Prevu.Synoptics.P140" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="156" StatusComponent="145-01-MA1" PipeHeight="Medium" Canvas.Left="422" Canvas.Top="608" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="156" StatusComponent="145-01-MA1" Canvas.Left="433" Canvas.Top="608" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="102" StatusComponent="145-01-MA1" PipeHeight="Medium" Canvas.Left="495" Canvas.Top="682" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="137" StatusComponent="149-01-MA1" PipeHeight="Medium" Canvas.Left="735" Canvas.Top="682" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="268" StatusComponent="149-01-MA1" PipeHeight="Medium" Canvas.Left="733" Canvas.Top="552" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="211" StatusComponent="149-01-MA1" Canvas.Left="658" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="274" StatusComponent="149-01-MA1" Canvas.Left="730" Canvas.Top="560" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="190" StatusComponent="149-01-MA1" PipeHeight="Medium" Canvas.Left="862" Canvas.Top="423" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="614" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="207" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="186" StatusComponent="149-01-MA1" Canvas.Left="865" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="575" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="207" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="144" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="137" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -49,14 +48,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="44" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="758" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="44" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="797" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="230" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="957" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="230" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="914" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -65,14 +64,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="126" StatusComponent="143-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="318" Canvas.Top="433" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="550" Canvas.Top="122"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="779" Canvas.Top="246">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="299" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="777" Canvas.Top="192"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="220" StatusComponent="140-01-MA1" PipeHeight="Medium" Canvas.Left="814" Canvas.Top="192"/>
         <Labels:Pipe Width="70" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1155" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -88,14 +80,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="93" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1235" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="60" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1067" Canvas.Top="457" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="42" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="798" Canvas.Top="163" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="144" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="708" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -103,21 +88,20 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="3" Width="184" RenderTransformOrigin="0.5,0.5" Canvas.Left="191" Canvas.Top="426"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Height="1" Width="180" Canvas.Left="580" Canvas.Top="677"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Top" Height="1" Width="180" Canvas.Left="495" Canvas.Top="688"/>
         <Machines:V01_NT_Belt_BottleSorter Canvas.Left="634" Canvas.Top="64" Height="116" Width="200" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="240" RenderTransformOrigin="0.5,0.5" Canvas.Left="420" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_NT_Belt_wMetalDetector_Diverter Canvas.Left="1006" Canvas.Top="367" Height="122" Width="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Manual_selection Height="77" Width="41" Canvas.Left="1034" Canvas.Top="438" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1075" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Manual_selection Height="76" Width="41" Canvas.Left="1057" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="618" Canvas.Top="580" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1168" Canvas.Top="502" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Manual_selection Height="77" Width="41" Canvas.Left="437" Canvas.Top="558" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Manual_selection Height="77" Width="41" Canvas.Left="492" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="140-SORT" JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="492" Canvas.Top="92"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="170-01-MA1" JumpToLabel="228-01-MA1" Canvas.Left="1272" Canvas.Top="551"/>
         <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="1207" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="669" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="143-01-MA1" Canvas.Left="257" Canvas.Top="366"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="149-01-MA1" Canvas.Left="620" Canvas.Top="705"/>
-        <Labels:DeviceLabel ComponentName="145-01-MA1" Canvas.Left="495" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="143-01-MA1" Canvas.Left="291" Canvas.Top="366"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="149-01-MA1" Canvas.Left="595" Canvas.Top="713"/>
+        <Labels:DeviceLabel ComponentName="145-01-MA1" Canvas.Left="580" Canvas.Top="469" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
