--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
@@ -167,9 +167,9 @@
                 </TransformGroup>
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="354" Canvas.Top="335" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="354" Canvas.Top="401" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="354" Canvas.Top="467" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="335" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="401" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="467" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="380-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1433" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="186" Canvas.Top="33"/>
         <Labels:JumpLabel JumpFromLabel="373-01-MA1" JumpToLabel="330-MIXER" Direction="Left" Canvas.Left="55" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
