--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
@@ -9,17 +9,16 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="65" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1070" Canvas.Top="429" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="96" StatusComponent="442-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="926" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="135" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1155" Canvas.Top="429" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="90" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1364" Canvas.Top="466" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Width="47" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1092" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="96" StatusComponent="442-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="900" Canvas.Top="521" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="137" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1153" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="90" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1332" Canvas.Top="450" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="66" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1345" Canvas.Top="423" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="232" Canvas.Top="225" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="673" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="433-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -27,7 +26,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="190" Canvas.Top="229" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="659" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water">
+        <Labels:Pipe Width="204" Canvas.Top="227" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="617" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -41,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="66" Canvas.Top="387" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="721" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water">
+        <Labels:Pipe Width="70" Canvas.Top="384" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="684" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -72,9 +71,9 @@
         </Labels:Pipe>
         <Labels:Pipe Width="120" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="86" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="135" VerticalAlignment="Center" Canvas.Top="131" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="264" HorizontalAlignment="Left"/>
-        <Labels:Pipe Width="212" VerticalAlignment="Center" Canvas.Top="136" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Left" Color="Water"/>
+        <Labels:Pipe Width="176" VerticalAlignment="Top" Canvas.Top="127" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Center" Color="Water"/>
         <Labels:Pipe Width="330" VisibilityComponent="" VerticalAlignment="Center" Canvas.Top="336" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" HorizontalAlignment="Left" PipeHeight="Medium"/>
-        <Labels:Pipe Width="50" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="816" Canvas.Top="419" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="66" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="758" Canvas.Top="419" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="200" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="363" Canvas.Top="437" HorizontalAlignment="Center" VerticalAlignment="Top" Text="{lex:Loc ADDITIVE}"/>
         <Labels:Pipe Width="289" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="451-21-CV1" Canvas.Left="417" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -102,7 +101,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="49" Canvas.Top="152" StatusComponent="453-01-MA1" Canvas.Left="164" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="100" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="814" Canvas.Top="467" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="100" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="772" Canvas.Top="467" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -127,7 +126,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="482" Color="Water" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="638" Height="45" HorizontalAlignment="Left"/>
+        <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="610" Height="45" HorizontalAlignment="Left"/>
         <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="163" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="397" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve_001.RenderTransform>
@@ -145,7 +144,7 @@
         </Machines:CV_Valve_001>
         <Machines:V01_VRC_WaterTank Canvas.Left="423" Canvas.Top="683" HorizontalAlignment="Center" VerticalAlignment="Top" Width="253" Height="125" ComponentName="450-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1101" Canvas.Top="101" Height="118" Width="150" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VB_VibratingScreen Canvas.Left="721" Canvas.Top="410" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="665" Canvas.Top="410" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="1096" Canvas.Top="587" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VSP_SepTank_w3Paddles Canvas.Left="365" Canvas.Top="101" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="430-41-LT1" TrendName="LEVEL"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1217" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -158,29 +157,23 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="328" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DCE_Centrifuge Canvas.Left="996" Canvas.Top="402" Height="153" Width="88" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="851" Canvas.Top="509" Height="5" Width="87" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:V01_BBF_SingleBag Canvas.Left="1362" Canvas.Top="486" HorizontalAlignment="Left" VerticalAlignment="Center" Height="96" Width="94"/>
-        <Rectangle Height="44" Canvas.Left="955" Canvas.Top="415" Width="61" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Rectangle Height="55" Canvas.Left="948" Canvas.Top="387" Width="67" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.7" ScaleY="0.7"/>
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="957" Canvas.Top="417" Height="38" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.7" ScaleY="0.7"/>
-                </TransformGroup>
-            </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-        </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Machines:SCW_ScrewConveyor_inclined Canvas.Left="1262" Canvas.Top="396" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="443-02-MA1" Canvas.Left="894" Canvas.Top="358" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="442-01-MA1" Canvas.Left="850" Canvas.Top="542" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="443-01-MA1" Canvas.Left="1002" Canvas.Top="359" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="446-01-MA1" Canvas.Left="1267" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="433-01-MA1" Canvas.Left="615" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="992" Canvas.Top="384" Height="172" Width="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="814" Canvas.Top="514" Height="5" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_BBF_SingleBag Canvas.Left="1330" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Top" Height="96" Width="94"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="960" Canvas.Top="400" Height="30" Width="30" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+
+        <Labels:DeviceLabel ComponentName="443-02-MA1" Canvas.Left="859" Canvas.Top="388" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="442-01-MA1" Canvas.Left="847" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="443-01-MA1" Canvas.Left="992" Canvas.Top="334" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="446-01-MA1" Canvas.Left="1314" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="433-01-MA1" Canvas.Left="587" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="430-PADDLES" Canvas.Left="408" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="430-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="425" Canvas.Top="167" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="420-01-MA1" Canvas.Left="196" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -191,14 +184,15 @@
         <Labels:DeviceLabel ComponentName="451-21-CV1" Canvas.Left="306" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="450-22-CV1" Canvas.Left="354" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="450" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="726" Canvas.Top="476" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="440-01-MA1" Canvas.Left="670" Canvas.Top="476" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="559" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="444-01-MA1" Canvas.Left="1101" Canvas.Top="653" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="455-01-MA1" JumpToLabel="524-01-MA1" Canvas.Left="1389" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="457-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="837" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="420-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="58" Canvas.Top="100"/>
         <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="509" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1445" Canvas.Top="607" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="446-62-BAG" Canvas.Left="1346" Canvas.Top="607" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DetailsLabel ComponentName="446-BAG" DetailsPageName="D446" HideComponentName="True" Canvas.Left="1412" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="446-62-BAG" Canvas.Left="1314" Canvas.Top="571" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1245" Canvas.Top="400" Height="5" Width="146" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
