--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P810.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P810.xaml
@@ -121,7 +121,7 @@
         </Machines:V01_VT_CMM_Blower_Air_Compressor>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="145" Canvas.Left="1003" Canvas.Top="628" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SLX_MixingSiloScrew Canvas.Left="126" Canvas.Top="247" Height="274" Width="208" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
-        <Machines:SCW_ScrewConveyor_straight Canvas.Left="1096" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight Canvas.Left="1096" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center" Width="127"/>
         <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="923" Canvas.Top="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="810-01-MA1" JumpToLabel="558-01-MA1" Canvas.Left="96" Canvas.Top="67" />
         <Labels:JumpLabel JumpFromLabel="878-01-MA1" JumpToLabel="880-01-EC1" Canvas.Left="1434" Canvas.Top="749" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -136,6 +136,6 @@
         <Labels:DeviceLabel ComponentName="870-01-MA1" Canvas.Left="1165" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="848-01-MA1" Canvas.Left="85" Canvas.Top="691" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="812-01-MA1" Canvas.Left="279" Canvas.Top="662" />
-        <Labels:DeviceLabel ComponentName="868-01-MA1" Canvas.Left="1226" Canvas.Top="358" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="868-01-MA1" Canvas.Left="1214" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
