--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P880.xaml
@@ -10,14 +10,14 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
 
-        <Labels:Pipe Width="50" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="457" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="86" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="439" Canvas.Top="113" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="75" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="501" Canvas.Top="128"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="87" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="489" Canvas.Top="128"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="44" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="552" Canvas.Top="148">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -39,7 +39,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" VisibilitySignal="" Canvas.Left="114" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" VisibilitySignal="" Canvas.Left="114" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1"  Color="Air" Canvas.Left="369" Canvas.Top="689" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="470" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="497" Canvas.Top="688" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="352" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="16" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -75,8 +75,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="149" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="621" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="300" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="480" Canvas.Top="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="448" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="554" Canvas.Top="276" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="300" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="480" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="430" StatusComponent="887-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="563" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -116,7 +116,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="356" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="959" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="15" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="450" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="25" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="450" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="280" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="338" Canvas.Top="536" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -131,7 +131,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="471" Canvas.Top="86" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="378" Canvas.Top="153" Height="260" Width="306" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="440" Canvas.Top="654" Height="50" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="975" Canvas.Top="134" Height="127" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -147,7 +146,6 @@
                 </TransformGroup>
             </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
         </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Rectangle Height="2" Stroke="Black" Width="156" RenderTransformOrigin="0.5,0.5" Canvas.Left="487" Canvas.Top="105" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="880-01-EC1" Canvas.Left="96" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" JumpToLabel="878-01-MA1" />
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="880-VIEW" DetailsPageName="D880" HideComponentName="True" Canvas.Left="518" Canvas.Top="188"/>
         <Labels:DetailsLabel ComponentName="883-BAG" DetailsPageName="D883" HideComponentName="True" Canvas.Left="1067" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -163,7 +161,6 @@
         <Labels:DeviceLabel ComponentName="880-01-ECS12" Canvas.Left="314" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="209" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="658" Canvas.Top="537" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="598" Canvas.Top="82" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="812" Canvas.Top="481" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1265" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
