--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P530.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P530.xaml
@@ -23,7 +23,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="130" StatusComponent="548-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="926" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="46" StatusComponent="557-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1258" Canvas.Top="533" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="46" StatusComponent="557-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1217" Canvas.Top="502" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -39,7 +39,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="558-01-MA1" Canvas.Left="1218" Canvas.Top="704" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="104" StatusComponent="558-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1340" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="104" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1220" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="61" StatusComponent="557-02-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1220" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="153" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="130" Canvas.Top="307" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="45" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="486" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe 
@@ -98,14 +98,7 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="296" Canvas.Top="140" Height="44" Width="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="729" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="1028" Canvas.Top="354" Height="114" Width="210" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DV_Diverter Canvas.Left="1251" Canvas.Top="416" RenderTransformOrigin="0.5,0.5" Height="100" Width="105" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:V01_DV_Diverter.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Machines:V01_DV_Diverter.RenderTransform>
-        </Machines:V01_DV_Diverter>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1259" Canvas.Top="526" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1218" Canvas.Top="495" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="1295" Canvas.Top="673" Height="43" Width="66" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1188" Canvas.Top="681" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="460-01-MA1" JumpToLabel="455-01-MA1" Canvas.Left="65" Canvas.Top="277"/>
@@ -118,8 +111,11 @@
         <Labels:DeviceLabel ComponentName="548-01-MA1" Canvas.Left="604" Canvas.Top="626" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="555-01-MA1" Canvas.Left="1088" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="572" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="557-02-MA1" Canvas.Left="1088" Canvas.Top="466" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="557-01-MA1" Canvas.Left="1351" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="557-02-MA1" Canvas.Left="1088" Canvas.Top="428" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="557-01-MA1" Canvas.Left="1328" Canvas.Top="397" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="558-01-MA1" Canvas.Left="1167" Canvas.Top="626" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_GrinderDiverter Canvas.Left="1227" Canvas.Top="402" Height="115" Width="108" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="44" Canvas.Left="1273" Canvas.Top="425" Width="16" Fill="#808080" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_MagneticRoll Canvas.Left="1266" Canvas.Top="439" Height="29" Width="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
